--- a/angular-heroes-of-chrono-trigger/src/app/heroes/heroes.component.css
+++ b/angular-heroes-of-chrono-trigger/src/app/heroes/heroes.component.css
@@ -1,9 +1,4 @@
 /* HeroesComponent's private CSS styles */
-
-.selected {
-  background-color: #CFD8DC !important;
-  color: #FFFFFF;
-}
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -11,38 +6,46 @@
   width: 10em;
 }
 .heroes li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
+
 .heroes li:hover {
   color: #607D8B;
-  background-color: #EEE;
+  background-color: #DDD;
   left: .1em;
 }
-.heroes li.selected:hover {
-  color: white;
-}
-.heroes .text {
+
+.heroes a {
+  color: #888;
+  text-decoration: none;
   position: relative;
-  top: -3px;
+  display: block;
+  width: 250px;
 }
+
+.heroes a:hover {
+  color:#607D8B;
+}
+
 .heroes .badge {
   display: inline-block;
   font-size: small;
   color: white;
-  padding: 0.8em 0.7em 0em 0.7em;
+  padding: 0.8em 0.7em 0 0.7em;
   background-color: #607D8B;
   line-height: 1em;
   position: relative;
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
-  border-radius: 4px 0px 0px 4px;
+  border-radius: 4px 0 0 4px;
 }
