--- a/angular-heroes-of-chrono-trigger/src/app/hero-detail/hero-detail.component.html
+++ b/angular-heroes-of-chrono-trigger/src/app/hero-detail/hero-detail.component.html
@@ -6,5 +6,6 @@
       <input [(ngModel)]="hero.desc" placeholder="description">
     </label>
   </div>
-<div>
   <button (click)="goBack()">Go Back</button>
+  <button (click)="save()">Save</button>
+<div>
